# tauri-playlist

./: bun.lockb  index.html  package.json  tailwind.config.ts  vite.config.ts
src/: App.css  App.tsx  index.css  index.html  main.js  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20250715140929_create_tracks_table.sql
src-tauri/src/: commands.rs  db.rs  file_utils.rs  lib.rs  models.rs
src-tauri/src/models/: mod.rs  playlist.rs  playlist_track.rs  track.rs
src/components/: AudioPlayer.tsx  Controls.tsx  MessageDialog.tsx  Pagination.tsx  Playlist.tsx  SearchPanel.tsx  Switch.tsx  Track.tsx  TrackList.tsx
