[package]
name = "tauri-playlist"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = ["protocol-asset", "devtools"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
futures = "0.3.31"
tokio = { version = "1.46.1", features = ["time", "rt", "macros"] }
tauri-plugin-shell = "2.3.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
lofty = "0.22.4"
tauri-plugin-dialog = "2.3.1"
tauri-plugin-opener = "2.4.0"
sea-orm = { version = "1.1.14", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }


[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
